--- a/style.css
+++ b/style.css
@@ -48,6 +48,15 @@ h6 {
 p {
   text-wrap: pretty;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { -moz-appearance:textfield; }
+
 span {
   display: block;
   font-size: 0.75rem;
@@ -84,7 +93,7 @@ label {
   display: flex;
   flex-direction: column;
 }
-input[type="text"] {
+input[type="number"] {
   border: none;
   background: var(--clr-neutral-500);
   padding: 0.5rem;
@@ -108,6 +117,10 @@ input[type="text"] {
 }
 .btn:hover {
   cursor: pointer;
+  background: var(--clr-primary-StrongCyan);
+  color: var(--clr-neutral-100);
+}
+.btn.active{
   background: var(--clr-primary-StrongCyan);
   color: var(--clr-neutral-100);
 }
